// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript - fork checker 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
Starting type checking service...
Using 1 worker with 2048MB memory limit
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name         module                                                       status
  1 kB  131          (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315          (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354          ./js/script.ts + 1 modules                                   built
  1 kB  561          ./js/SomeLibrary.ts                                          built

  size  name         asset                                                        status
  1 kB  default      myBundle.min.js                                              emitted
  1 kB  map          myBundle.min.js.map                                          emitted
  1 kB  someLibrary  someLibrary.myBundle.min.js                                  emitted
  1 kB  map          someLibrary.myBundle.min.js.map                              emitted

  (7 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript - fork checker 2`] = `
"(function(n,e){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=e();else if(\\"function\\"===typeof define&&define.amd)define([],e);else{var t=e();for(var r in t)(\\"object\\"===typeof exports?exports:n)[r]=t[r]}})(window,(function(){return function(){\\"use strict\\";var n={315:function(n,e,t){function r(n,e){if(!(n instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(e,{Z:function(){return r}})},131:function(n,e,t){function r(n,e){for(var t=0;t<e.length;t++){var r=e[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(n,r.key,r)}}function o(n,e,t){return e&&r(n.prototype,e),t&&r(n,t),n}t.d(e,{Z:function(){return o}})},354:function(n,e,t){t.r(e);var r=t(315);var o=t(131);function u(n,e){return n+e}t.d(e,{default:function(){return i}});var i=function(){function n(){(0,r.Z)(this,n),console.log(\\"init class\\")}return(0,o.Z)(n,[{key:\\"method\\",value:function(){console.log(u(2,4)),t.e(399).then(t.bind(t,561)).then((function(n){var e=new n.default;console.log(e.add(2,4))}))}}]),n}()}};var e={};function t(r){if(e[r])return e[r].exports;var o=e[r]={exports:{}};return n[r](o,o.exports,t),o.exports}return t.m=n,function(){t.d=function(n,e){for(var r in e)t.o(e,r)&&!t.o(n,r)&&Object.defineProperty(n,r,{enumerable:true,get:e[r]})}}(),function(){t.f={},t.e=function(n){return Promise.all(Object.keys(t.f).reduce((function(e,r){return t.f[r](n,e),e}),[]))}}(),function(){t.u=function(n){return\\"someLibrary.myBundle.min.js\\"}}(),function(){t.o=function(n,e){return Object.prototype.hasOwnProperty.call(n,e)}}(),function(){t.r=function(n){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(n,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(n,\\"__esModule\\",{value:true})}}(),function(){t.p=\\"\\"}(),function(){var n={913:0};function e(e){var r=e[0];var o=e[1];var i=e[3];var f,a,c=0,l=[];for(;c<r.length;c++)a=r[c],t.o(n,a)&&n[a]&&l.push(n[a][0]),n[a]=0;for(f in o)t.o(o,f)&&(t.m[f]=o[f]);i&&i(t),u&&u(e);while(l.length)l.shift()()}t.f.j=function(e,r){var o=t.o(n,e)?n[e]:void 0;if(0!==o)if(o)r.push(o[2]);else{var u=new Promise((function(t,r){o=n[e]=[t,r]}));r.push(o[2]=u);var i=t.p+t.u(e);var f=function(){if(t.o(n,e)&&(o=n[e],0!==o&&(n[e]=void 0),o))return o[1]};var a=document.createElement(\\"script\\");var c;a.charset=\\"utf-8\\",a.timeout=120,t.nc&&a.setAttribute(\\"nonce\\",t.nc),a.src=i;var l=new Error;c=function(n){c=function(){},a.onerror=a.onload=null,clearTimeout(s);var t=f();if(t){var r=n&&(\\"load\\"===n.type?\\"missing\\":n.type);var o=n&&n.target&&n.target.src;l.message=\\"Loading chunk \\"+e+\\" failed.\\\\n(\\"+r+\\": \\"+o+\\")\\",l.name=\\"ChunkLoadError\\",l.type=r,l.request=o,t(l)}};var s=setTimeout((function(){c({type:\\"timeout\\",target:a})}),12e4);a.onerror=a.onload=c,document.head.appendChild(a)}};var r=window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[];var o=r.push.bind(r);r.push=e;var u=o}(),t(354)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript - fork checker 3`] = `
"(window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[]).push([[399],{561:function(n,u,t){\\"use strict\\";t.r(u),t.d(u,{default:function(){return i}});var e=t(315);var r=t(131);var i=function(){function n(){(0,e.Z)(this,n)}return(0,r.Z)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}}]);
//# sourceMappingURL=someLibrary.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name     module                                                       status
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354      ./js/script.ts + 1 modules                                   built
  1 kB  561      ./js/SomeLibrary.ts                                          built

  size  name     asset                                                        status
  1 kB  js       561.myBundle.min.js                                          emitted
  1 kB  map      561.myBundle.min.js.map                                      emitted
  1 kB  ts       js/Component.d.ts                                            emitted
  1 kB  ts       js/SomeLibrary.d.ts                                          emitted
  1 kB  ts       js/script.d.ts                                               emitted
  1 kB  default  myBundle.min.js                                              emitted
  1 kB  map      myBundle.min.js.map                                          emitted

  (7 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"(function(n,e){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=e();else if(\\"function\\"===typeof define&&define.amd)define([],e);else{var t=e();for(var o in t)(\\"object\\"===typeof exports?exports:n)[o]=t[o]}})(window,(function(){return function(){\\"use strict\\";var n={315:function(n,e,t){function o(n,e){if(!(n instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(e,{Z:function(){return o}})},131:function(n,e,t){function o(n,e){for(var t=0;t<e.length;t++){var o=e[t];o.enumerable=o.enumerable||false,o.configurable=true,\\"value\\"in o&&(o.writable=true),Object.defineProperty(n,o.key,o)}}function r(n,e,t){return e&&o(n.prototype,e),t&&o(n,t),n}t.d(e,{Z:function(){return r}})},354:function(n,e,t){t.r(e);var o=t(315);var r=t(131);function u(n,e){return n+e}t.d(e,{default:function(){return i}});var i=function(){function n(){(0,o.Z)(this,n),console.log(\\"init class\\")}return(0,r.Z)(n,[{key:\\"method\\",value:function(){console.log(u(2,4)),t.e(561).then(t.bind(t,561)).then((function(n){var e=new n.default;console.log(e.add(2,4))}))}}]),n}()}};var e={};function t(o){if(e[o])return e[o].exports;var r=e[o]={exports:{}};return n[o](r,r.exports,t),r.exports}return t.m=n,function(){t.d=function(n,e){for(var o in e)t.o(e,o)&&!t.o(n,o)&&Object.defineProperty(n,o,{enumerable:true,get:e[o]})}}(),function(){t.f={},t.e=function(n){return Promise.all(Object.keys(t.f).reduce((function(e,o){return t.f[o](n,e),e}),[]))}}(),function(){t.u=function(n){return n+\\".myBundle.min.js\\"}}(),function(){t.o=function(n,e){return Object.prototype.hasOwnProperty.call(n,e)}}(),function(){t.r=function(n){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(n,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(n,\\"__esModule\\",{value:true})}}(),function(){t.p=\\"\\"}(),function(){var n={913:0};function e(e){var o=e[0];var r=e[1];var i=e[3];var f,a,c=0,l=[];for(;c<o.length;c++)a=o[c],t.o(n,a)&&n[a]&&l.push(n[a][0]),n[a]=0;for(f in r)t.o(r,f)&&(t.m[f]=r[f]);i&&i(t),u&&u(e);while(l.length)l.shift()()}t.f.j=function(e,o){var r=t.o(n,e)?n[e]:void 0;if(0!==r)if(r)o.push(r[2]);else{var u=new Promise((function(t,o){r=n[e]=[t,o]}));o.push(r[2]=u);var i=t.p+t.u(e);var f=function(){if(t.o(n,e)&&(r=n[e],0!==r&&(n[e]=void 0),r))return r[1]};var a=document.createElement(\\"script\\");var c;a.charset=\\"utf-8\\",a.timeout=120,t.nc&&a.setAttribute(\\"nonce\\",t.nc),a.src=i;var l=new Error;c=function(n){c=function(){},a.onerror=a.onload=null,clearTimeout(s);var t=f();if(t){var o=n&&(\\"load\\"===n.type?\\"missing\\":n.type);var r=n&&n.target&&n.target.src;l.message=\\"Loading chunk \\"+e+\\" failed.\\\\n(\\"+o+\\": \\"+r+\\")\\",l.name=\\"ChunkLoadError\\",l.type=o,l.request=r,t(l)}};var s=setTimeout((function(){c({type:\\"timeout\\",target:a})}),12e4);a.onerror=a.onload=c,document.head.appendChild(a)}};var o=window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[];var r=o.push.bind(o);o.push=e;var u=r}(),t(354)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript 3`] = `
"(window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[]).push([[561],{561:function(n,u,t){\\"use strict\\";t.r(u),t.d(u,{default:function(){return i}});var e=t(315);var r=t(131);var i=function(){function n(){(0,e.Z)(this,n)}return(0,r.Z)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}}]);
//# sourceMappingURL=561.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 4`] = `
"export default class SomeLibrary {
    add(a: any, b: any): any;
    substract(a: any, b: any): number;
    divide(a: any, b: any): number;
}
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (3 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1)
      TS1068: Unexpected token. A constructor, method, accessor, or property was expected.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
}
`;

exports[`Fails gracefully on invalid TS - fork checker 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
Starting type checking service...
Using 1 worker with 2048MB memory limit
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (2 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 1 problem (1 error, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Fails gracefully on invalid TS 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (3 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts(5,17)
      TS2339: Property 'someNonExistingMethod' does not exist on type 'D'.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
",
}
`;

exports[`Lints TypeScript with webpack 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                                                       status
  1 kB  131   (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315   (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354   ./js/script.ts + 1 modules                                   built failed ✖
  1 kB  561   ./js/SomeLibrary.ts                                          built failed ✖

  (7 assets, 7 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  2:1  error  Prefer default export                                               @swissquote/swissquote/import/prefer-default-export
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

✖ 3 problems (3 errors, 0 warnings)
  2 errors and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/SomeLibrary.ts
  10:15  error  Delete \`⏎·\`  @swissquote/swissquote/prettier/prettier

✖ 1 problem (1 error, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`                   @swissquote/swissquote/prettier/prettier
   5:1   error    Replace \`····constructor·\` with \`··constructor\`        @swissquote/swissquote/prettier/prettier
   6:5   warning  Unexpected console statement                           no-console
   7:1   error    Insert \`·\`                                             @swissquote/swissquote/prettier/prettier
  10:5   warning  Unexpected console statement                           no-console
  10:17  error    Replace \`·test(·\` with \`test(\`                         @swissquote/swissquote/prettier/prettier
  12:34  error    Replace \`·(SomeLibrary)·=>⏎···\` with \`SomeLibrary·=>\`  @swissquote/swissquote/prettier/prettier
  16:7   warning  Unexpected console statement                           no-console
  17:7   error    Insert \`;\`                                             @swissquote/swissquote/prettier/prettier

✖ 9 problems (6 errors, 3 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 3 problems (3 errors, 0 warnings)

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
  size  name     module                       status
  1 kB  163      ./js/index.ts + 3 modules    built

  size  name     asset                        status
  1 kB  ts       js/imported-typescript.d.ts  emitted
  1 kB  ts       js/index.d.ts                emitted
  1 kB  default  myBundle.min.js              emitted
  1 kB  map      myBundle.min.js.map          emitted

  (1 module hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
